# winix

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: core.yml
entity/: auth.py  cmd.py  driver.py
winix/: __init__.py  auth.py  cmd.py  driver.py
