[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winix"
version = "0.4.0"
description = "Modern Winix integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Joshua Cordoba", email = "jcordobab101@icloud.com" }
]
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
winix = "winix.cmd:main"
winixctl = "winix.cmd:main"