[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winix"
version = "0.4.2"
description = "Modern Winix integration for Winix air purifiers with CLI and Python API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "JC", email = "jcordoba@mj-social.com" }
]

dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "warrant-lite>=1.0.4"
]

keywords = ["winix", "air purifier", "iot", "cli", "cognito"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
winix = "winix.cmd:main"
winixctl = "winix.cmd:main"

[tool.setuptools.packages.find]
include = ["winix*"]